# Pra

./: .gitignore  Dockerfile  Pytorch1.ipynb  app.py  code.py  dvc.yaml  dvc.yml  file.py  main.py  params.yaml  params.yml  pyproject.toml  requirements..txt  requirements.txt
.dvc/: config
.github/: ci.yaml  ci.yml
.github/.workflows/: ci.yaml
.github/workflows/: ci.yml
artifacts/models/: knn.pkl
data/: data.csv.dvc
pipeline/: data_ingestion.py  model.py  utils.py
